--- a/pantheon.upstream.yml
+++ b/pantheon.upstream.yml
@@ -23,4 +23,4 @@ protected_web_paths:
 # 'protected_web_paths_override' is set to true, then the upstream paths
 # are disabled.
 protected_web_paths_override: false
-nested_docroot: true
+web_docroot: true
